add modal, overlay classes & html for example

--- a/src/index.html
+++ b/src/index.html
@@ -103,5 +103,8 @@
         <aside></aside>
       </section>
     </main>
+    <div class="overlay">
+      <div class="modal"></div>
+    </div>
   </body>
 </html>
