--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,66 @@
             </p>
             <button class="button">Selecionar</button>
           </li>
+          <li class="product">
+            <img
+              class="product__image"
+              src="images/coca-cola.png"
+              alt="Coca cola"
+            />
+            <p class="product__text">
+              <span class="product__price">R$ 6,00</span>
+              <span class="product__name">Coca cola</span>
+            </p>
+            <button class="button">Selecionar</button>
+          </li>
+          <li class="product">
+            <img
+              class="product__image"
+              src="images/coca-cola.png"
+              alt="Coca cola"
+            />
+            <p class="product__text">
+              <span class="product__price">R$ 6,00</span>
+              <span class="product__name">Coca cola</span>
+            </p>
+            <button class="button">Selecionar</button>
+          </li>
+          <li class="product">
+            <img
+              class="product__image"
+              src="images/coca-cola.png"
+              alt="Coca cola"
+            />
+            <p class="product__text">
+              <span class="product__price">R$ 6,00</span>
+              <span class="product__name">Coca cola</span>
+            </p>
+            <button class="button">Selecionar</button>
+          </li>
+          <li class="product">
+            <img
+              class="product__image"
+              src="images/coca-cola.png"
+              alt="Coca cola"
+            />
+            <p class="product__text">
+              <span class="product__price">R$ 6,00</span>
+              <span class="product__name">Coca cola</span>
+            </p>
+            <button class="button">Selecionar</button>
+          </li>
+          <li class="product">
+            <img
+              class="product__image"
+              src="images/coca-cola.png"
+              alt="Coca cola"
+            />
+            <p class="product__text">
+              <span class="product__price">R$ 6,00</span>
+              <span class="product__name">Coca cola</span>
+            </p>
+            <button class="button">Selecionar</button>
+          </li>
         </ul>
         <aside></aside>
       </section>
