add html and css styles related to order summary

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,11 @@
           </template>
         </ul>
         <aside class="order">
+          <div class="order__header">
+            <p class="order__title">Resumo da Venda</p>
+            <p class="order__author">José Costa</p>
+            <hr class="order__hr" />
+          </div>
           <ul class="order__list">
             <template id="order__entry">
               <li class="order__item item">
@@ -72,13 +77,65 @@
                   <span class="item__product"></span>
                   <span class="item__price"></span>
                 </div>
-                <button>-</button>
-                <span class="item__quantity">1</span>
-                <button>+</button>
+                <div>
+                  <button>-</button>
+                  <span class="item__quantity">1</span>
+                  <button>+</button>
+                </div>
                 <span class="item__total"></span>
               </li>
             </template>
+            <li class="order__item item">
+              <div>
+                <span class="item__product">Bolo de chocolate</span>
+                <span class="item__price">R$ 8,00</span>
+              </div>
+              <div>
+                <button class="order__quantity-button">-</button>
+                <span class="item__quantity">1</span>
+                <button class="order__quantity-button">+</button>
+              </div>
+              <span class="item__total">R$ 8,00</span>
+            </li>
+            <li class="order__item item">
+              <div>
+                <span class="item__product">Café expresso</span>
+                <span class="item__price">R$ 5,00</span>
+              </div>
+              <div>
+                <button class="order__quantity-button">-</button>
+                <span class="item__quantity">1</span>
+                <button class="order__quantity-button">+</button>
+              </div>
+              <span class="item__total">R$ 5,00</span>
+            </li>
+            <li class="order__item item">
+              <div>
+                <span class="item__product">Coca cola</span>
+                <span class="item__price">R$ 6,00</span>
+              </div>
+              <div>
+                <button class="order__quantity-button">-</button>
+                <span class="item__quantity">1</span>
+                <button class="order__quantity-button">+</button>
+              </div>
+              <span class="item__total">R$ 6,00</span>
+            </li>
           </ul>
+          <hr class="order__hr" />
+          <div class="order__total-container">
+            <div class="order__total-text-container">
+              <span class="order__total-text-bold">Sub total</span>
+              <span class="order__total-text">Descontos</span>
+              <span class="order__total-text-bold">Total</span>
+            </div>
+            <div class="order__total-values-container">
+              <span class="order__total-values-bold">R$ 19,00</span>
+              <span class="order__total-values">R$ 2,00</span>
+              <span class="order__total-values-bold">R$ 17,00</span>
+            </div>
+          </div>
+          <button class="order__button">Finalizar</button>
         </aside>
         <button id="open-product-modal" class="button button_type_success">
           Adicionar item
