Fixed store section structure

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           </li>
         </ul>
       </nav>
-      <section class="">
+      <section class="store">
         <ul class="products">
           <template id="product-card">
             <li class="product">
