modal do sucesso

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
         </button>
       </section>
     </main>
-    <div class="modal modal_create-product">
+    <div class="modal modal_create-product ">
       <article class="modal__container modal__container_product">
         <header>
           <h1>Novo Produto</h1>
@@ -118,6 +118,13 @@
             <button class="button button_type_success">Salvar Produto</button>
           </form>
         </main>
+      </article>
+    </div>
+    <div class="modal modal_suces">
+      <article class="modal__container modal_container_sucess">
+        <h2>Pedido Finalizado</h2>
+        <p>Seu pedido foi finalizado com sucesso</p>
+        <img alt="Sucesso" src="./images/sucess.png">
       </article>
     </div>
   </body>
