modal do delete

--- a/src/index.html
+++ b/src/index.html
@@ -120,5 +120,16 @@
         </main>
       </article>
     </div>
+    <div class="modal modal_opened">
+      <article class="modal__container">
+        <h2>Excluir Produto</h2>
+        <p>Você tem certeza que deseja excluir o produto “Fulano de Tal”? 
+          Após confirmar, esta ação não poderá ser desfeita.</p>
+        <div class="modal__buttons">
+          <button class="button__false modal__button">Cancelar</button>
+          <button class="button__true modal__button">Excluir Item</button>
+        </div>
+      </article>
+    </div>
   </body>
 </html>
