--- a/src/index.html
+++ b/src/index.html
@@ -120,10 +120,10 @@
         </main>
       </article>
     </div>
-    <div class="modal modal_suces">
+    <div class="modal modal_opened">
       <article class="modal__container modal_container_sucess">
-        <h2>Pedido Finalizado</h2>
-        <p>Seu pedido foi finalizado com sucesso</p>
+        <h2 class="modal__title">Pedido Finalizado</h2>
+        <p class="modal__text">Seu pedido foi finalizado com sucesso</p>
         <img alt="Sucesso" src="./images/sucess.png">
       </article>
     </div>
