modal de deletar

--- a/src/index.html
+++ b/src/index.html
@@ -121,9 +121,9 @@
       </article>
     </div>
     <div class="modal modal_opened">
-      <article class="modal__container">
-        <h2>Excluir Produto</h2>
-        <p>Você tem certeza que deseja excluir o produto “Fulano de Tal”? 
+      <article class="modal__container modal__container_delete">
+        <h2 class="modal__title">Excluir Produto</h2>
+        <p class="modal__text modal__text_delete">Você tem certeza que deseja excluir o produto “Fulano de Tal”? 
           Após confirmar, esta ação não poderá ser desfeita.</p>
         <div class="modal__buttons">
           <button class="button__false modal__button">Cancelar</button>
