--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,9 @@
                 <option value="Lanches">Lanches</option>
               </select>
             </div>
-            <button class="button button_type_success">Salvar Produto</button>
+            <button class="button button_type_success button_local_modal">
+              Salvar Produto
+            </button>
           </form>
         </main>
       </article>
