--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
         </button>
       </section>
     </main>
-    <div class="modal modal_create-product modal_opened">
+    <div class="modal modal_create-product">
       <article class="modal__container modal__container_product">
         <header class="modal__header">
           <h1 class="modal__title">Novo Produto</h1>
