--- a/src/index.html
+++ b/src/index.html
@@ -133,30 +133,49 @@
           <button id="close-product-modal">X</button>
         </header>
         <main>
-          <form name="form-product" class="form">
+          <form name="form-product" class="form" novalidate>
             <div class="form__control">
               <label class="form__label" for="image">Imagem do Produto</label>
-              <input name="image" id="image" />
+              <input type="url" class="form__input" name="image" id="image" />
             </div>
             <div class="form__control">
               <label class="form__label" for="name">Nome do Produto</label>
-              <input name="name" id="name" />
+              <input class="form__input" name="name" id="name" required />
+              <p class="form__error">Campo obrigatório</p>
             </div>
             <div class="form__control">
               <label class="form__label" for="price">Preço do Produto</label>
-              <input name="price" id="price" />
+              <input
+                class="form__input"
+                type="number"
+                name="price"
+                id="price"
+                required
+              />
+              <p class="form__error">Campo obrigatório</p>
             </div>
             <div class="form__control">
               <label class="form__label" for="category"
                 >Categoria do Produto
               </label>
-              <select name="category" id="category">
+              <select
+                class="form__input"
+                name="category"
+                id="category"
+                required
+              >
                 <option value="Bebidas">Bebidas</option>
                 <option value="Doces">Doces</option>
                 <option value="Lanches">Lanches</option>
               </select>
             </div>
-            <button class="button button_type_success">Salvar Produto</button>
+            <button
+              name="button_submit"
+              class="button button_type_success"
+              disabled
+            >
+              Salvar Produto
+            </button>
           </form>
         </main>
       </article>
