Added alert template and showAlert function

--- a/src/index.html
+++ b/src/index.html
@@ -180,5 +180,22 @@
         </main>
       </article>
     </div>
+
+    <template id="alert-template">
+      <div class="alert">
+        <img
+          src="./images/check-circle.svg"
+          alt="Check Circle"
+          class="alert__image"
+        />
+        <div>
+          <p class="alert__title"></p>
+          <p class="alert__text">
+            O produto <span class="alert__text-product"></span> foi
+            <span id="alert__text-action"></span> com sucesso!
+          </p>
+        </div>
+      </div>
+    </template>
   </body>
 </html>
