--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>PDV</title>
   </head>
-  <body>
-    PDV
+  <body class="page">
+    <nav class="menu">
+      <ul class="menu__bar">
+        <li class="menu__item">
+          <img
+            class="menu__image"
+            src="./images/svg/bebidas.svg"
+            alt="Ícone de garrafa para opção do menu bebidas"
+          />
+          <p class="menu__paragraph">Bebidas</p>
+        </li>
+        <li class="menu__item">
+          <img
+            class="menu__image"
+            src="./images/svg/doces.svg"
+            alt="Ícone de bolo para opção do menu doces"
+          />
+          <p class="menu__paragraph">Doces</p>
+        </li>
+        <li class="menu__item">
+          <img
+            class="menu__image"
+            src="./images/svg/lanches.svg"
+            alt="Ícone de batata frita para opção de menu lanches"
+          />
+          <p class="menu__paragraph">Lanches</p>
+        </li>
+      </ul>
+      <hr class="menu__ruler" />
+    </nav>
   </body>
 </html>
