--- a/src/index.html
+++ b/src/index.html
@@ -181,8 +181,9 @@
       </article>
     </div>
 
+    <div class="alert_container"></div>
     <template id="alert-template">
-      <div class="alert">
+      <div class="alert show_alert">
         <img
           src="./images/check-circle.svg"
           alt="Check Circle"
