Add hover function on menu itens

--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>PDV</title>
   </head>
   <body class="page">
     <nav class="menu">
       <ul class="menu__bar">
-        <li>
-          <button class="menu__item">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="32"
-              height="32"
-              stroke="none"
-            >
-              <path
-                d="M31.679 4.673 27.292.287a1.11 1.11 0 0 0-1.563
+        <li class="menu__item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            stroke="none"
+          >
+            <path
+              d="M31.679 4.673 27.292.287a1.11 1.11 0 0 0-1.563
               1.562l.206.192-7.553 5.675-5.25 1.056c-.21.042-.405.142-.562.288L.973
               20.67a3.276 3.276 0 0 0 0 4.66l5.662 5.662a3.276
               3.276 0 0 0 4.66 0l11.61-11.597c.146-.157.246-.351.288-.562l1.056-5.25
@@ -32,63 +31,58 @@
               18.08l-1.179 1.18-7.224-7.225 1.179-1.179
               5.168-1.041c.158-.033.308-.098.438-.192l8.006-6.004.85.85-6.004
               8.005Z"
-              />
-            </svg>
-            <p class="menu__paragraph">Bebidas</p>
-          </button>
+            />
+          </svg>
+          <p class="menu__paragraph">Bebidas</p>
         </li>
-        <li>
-          <button class="menu__item">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="30"
-              height="29"
-              fill="none"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M17 8.333 5 13.6h20L21.667 9"
-              />
-              <path
-                stroke-width="2"
-                d="M19.667 10.333a2.667 2.667 0 1 0 0-5.333 2.667 2.667 0 0 0 0 5.333Z"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-width="2"
-                d="m21 5 1.333-3.333"
-              />
-              <path
-                stroke-width="2"
-                d="M5.334 16.971c-.402.2-.775.413-1.119.637-1.603 1.046-2.548 2.333-2.548 3.725 0 3.498 5.97 6.334 13.333 6.334 7.364 0 13.334-2.836 13.334-6.334 0-1.426-.992-2.742-2.667-3.8"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M5 13.666h20v8H5v-8Z"
-              />
-              <path stroke-width="2" d="M5 13.666h20.667" />
-            </svg>
-            <p class="menu__paragraph">Doces</p>
-          </button>
+        <li class="menu__item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="30"
+            height="29"
+            fill="none"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M17 8.333 5 13.6h20L21.667 9"
+            />
+            <path
+              stroke-width="2"
+              d="M19.667 10.333a2.667 2.667 0 1 0 0-5.333 2.667 2.667 0 0 0 0 5.333Z"
+            />
+            <path
+              stroke-linecap="round"
+              stroke-width="2"
+              d="m21 5 1.333-3.333"
+            />
+            <path
+              stroke-width="2"
+              d="M5.334 16.971c-.402.2-.775.413-1.119.637-1.603 1.046-2.548 2.333-2.548 3.725 0 3.498 5.97 6.334 13.333 6.334 7.364 0 13.334-2.836 13.334-6.334 0-1.426-.992-2.742-2.667-3.8"
+            />
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M5 13.666h20v8H5v-8Z"
+            />
+            <path stroke-width="2" d="M5 13.666h20.667" />
+          </svg>
+          <p class="menu__paragraph">Doces</p>
         </li>
-        <li>
-          <button class="menu__item">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="20"
-              height="28"
-              stroke="none"
-            >
-              <path
-                d="M18 12.666V6h-4V3.333h-4V.667H4.667v4H2v8H.667l2.667 14.666h13.333l2.667-14.666H18Zm-2.853 0A5.365 5.365 0 0 1 14 14.826V9.493l2.667 1.333v1.84h-1.52Zm1.52-5.333v2L14 8v-.667h2.667ZM10 4.666h2.667v4.667L10 10.666v-6Zm0 7.494 2.667-1.334v5.107a5.198 5.198 0 0 1-2.667.733V12.16Zm-1.333 4.32c-1.053-.28-2-.854-2.667-1.654v-4l2.667-1.333v6.987ZM6 2h2.667v6l-1.333.666v-4H6V2ZM3.334 6H6v3.333L4.667 10v2.666H3.334V6Z"
-              />
-            </svg>
-            <p class="menu__paragraph">Lanches</p>
-          </button>
+        <li class="menu__item">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="28"
+            stroke="none"
+          >
+            <path
+              d="M18 12.666V6h-4V3.333h-4V.667H4.667v4H2v8H.667l2.667 14.666h13.333l2.667-14.666H18Zm-2.853 0A5.365 5.365 0 0 1 14 14.826V9.493l2.667 1.333v1.84h-1.52Zm1.52-5.333v2L14 8v-.667h2.667ZM10 4.666h2.667v4.667L10 10.666v-6Zm0 7.494 2.667-1.334v5.107a5.198 5.198 0 0 1-2.667.733V12.16Zm-1.333 4.32c-1.053-.28-2-.854-2.667-1.654v-4l2.667-1.333v6.987ZM6 2h2.667v6l-1.333.666v-4H6V2ZM3.334 6H6v3.333L4.667 10v2.666H3.334V6Z"
+            />
+          </svg>
+          <p class="menu__paragraph">Lanches</p>
         </li>
       </ul>
       <hr class="menu__ruler" />
