--- a/src/index.html
+++ b/src/index.html
@@ -11,29 +11,35 @@
   <body class="page">
     <nav class="menu">
       <ul class="menu__bar">
-        <li class="menu__item">
-          <img
-            class="menu__image"
-            src="./images/svg/bebidas.svg"
-            alt="Ícone de garrafa para opção do menu bebidas"
-          />
-          <p class="menu__paragraph">Bebidas</p>
+        <li>
+          <button class="menu__item">
+            <img
+              class="menu__image"
+              src="./images/svg/bebidas.svg"
+              alt="Ícone de garrafa para opção do menu bebidas"
+            />
+            <span class="menu__paragraph">Bebidas</span>
+          </button>
         </li>
-        <li class="menu__item">
-          <img
-            class="menu__image"
-            src="./images/svg/doces.svg"
-            alt="Ícone de bolo para opção do menu doces"
-          />
-          <p class="menu__paragraph">Doces</p>
+        <li>
+          <button class="menu__item">
+            <img
+              class="menu__image"
+              src="./images/svg/doces.svg"
+              alt="Ícone de bolo para opção do menu doces"
+            />
+            <span class="menu__paragraph">Doces</span>
+          </button>
         </li>
-        <li class="menu__item">
-          <img
-            class="menu__image"
-            src="./images/svg/lanches.svg"
-            alt="Ícone de batata frita para opção de menu lanches"
-          />
-          <p class="menu__paragraph">Lanches</p>
+        <li>
+          <button class="menu__item">
+            <img
+              class="menu__image"
+              src="./images/svg/lanches.svg"
+              alt="Ícone de batata frita para opção de menu lanches"
+            />
+            <span class="menu__paragraph">Lanches</span>
+          </button>
         </li>
       </ul>
       <hr class="menu__ruler" />
