add event listener on created products & local storage

--- a/src/index.html
+++ b/src/index.html
@@ -105,9 +105,11 @@
                 <span class="order__total-text-bold">Total</span>
               </div>
               <div>
-                <span class="order__total-text-bold">R$ 19,00</span>
-                <span class="order__total-text">R$ 2,00</span>
-                <span class="order__total-text-bold">R$ 17,00</span>
+                <span class="order__total order__total-text-bold">R$ 0,00</span>
+                <span class="order__total-text">R$ 0,00</span>
+                <span class="order__subtotal order__total-text-bold"
+                  >R$ 0,00</span
+                >
               </div>
             </div>
             <button
